fixed lobby layout issue

--- a/client/web/src/main/webapp/skins/default/less/lobby.less
+++ b/client/web/src/main/webapp/skins/default/less/lobby.less
@@ -187,14 +187,19 @@ table thead {
 
 
 }
-.lobby-container {
-
-}
 *, *:before, *:after  {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 }
+
+.lobby-container *,.lobby-container *:before,.lobby-container  *:after{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 
 .lobby-right-promotions-iframe {
     width:100%;
